--- a/app_server/views/location-info.jade
+++ b/app_server/views/location-info.jade
@@ -48,7 +48,7 @@ block content
                 .col-xs-12
                     .panel.panel-primary.review-panel
                         .panel-heading
-                            a.btn.btn-default.pull-right(href='/location/review/new') Add review
+                            a.btn.btn-default.pull-right(href='/location/add/review') Add review
                             h2.panel-title Customer reviews
                         .panel-body.review-container
                             .row
@@ -77,6 +77,6 @@ block content
                                         small.reviewTimestamp 16 June 2013
                                     .col-xs-12
                                         p It was okay. Coffee wasn't great, but the wifi was fast.
-                .col-xs-12.col-md-3
-                    p.lead Simon's cafe is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
-                    p If you've been and you like it - or if you don't - please leave a review to help other people just like you.
+        .col-xs-12.col-md-3
+            p.lead Simon's cafe is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
+            p If you've been and you like it - or if you don't - please leave a review to help other people just like you.
