--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,14 +3,14 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(href='/bootstrap/css/amelia.bootstrap.css', rel='stylesheet')
-    link(href='/stylesheets/style.css', rel='stylesheet')
+    link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    .navbar.navbar-default.navbar-fixed-top
+   .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
           a.navbar-brand(href='/') Loc8r
-          button.navbar-toggle(data-target='#navbar-main', data-toggle='collapse', type='button')
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-main')
             span.icon-bar
             span.icon-bar
             span.icon-bar
@@ -18,11 +18,14 @@ html
           ul.nav.navbar-nav
             li
               a(href='/about/') About
+
     .container
       block content
+
       footer
         .row
           .col-xs-12
-            small &copy; Sharan 2017
-    script(src='/javascripts/jquery.min.js')
+            small &copy; Simon Holmes 2014
+
+    script(src='/javascripts/jquery-1.11.1.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
